--- a/Style.css
+++ b/Style.css
@@ -304,7 +304,7 @@ section3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 20px;
+  gap: 10px;
 }
 .grid1 {
   display: flex;
@@ -419,24 +419,23 @@ section3 {
   display: flex;
   flex-direction: row;
   padding-top: 143px;
-  padding-bottom: 74px;
+  padding-bottom: 30px;
   width: 1280px;
   height: 597px;
 }
 .text {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: center;
   width: 526px;
-  height: 356px;
+  height: 200px;
   padding-top: 250px;
   padding-left: 80px;
   gap: 30px;
 }
 .image2 > img {
   width: 660px;
-  height: 500px;
+  height: 420px;
 }
 .text1 > a {
   display: flex;
@@ -461,15 +460,41 @@ section3 {
   font-size: 16px;
   font-weight: 400;
 }
-/* section5 */
-.Section5 {
+.sec5 {
   display: flex;
   flex-direction: column;
   padding-top: 74px;
-  width: 1280px;
-  height: 442px;
-  background-color: #e7f9fd;
   justify-content: center;
   align-items: center;
-  /* padding-top: 20px; */
+  width: 1280px;
+  height: 400px;
+  background-color: #e7f9fd;
+  border-radius: 16px;
 }
+.part5 {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: #e7f9fd;
+}
+.part5 > h4 {
+  width: 589px;
+  height: 58px;
+  text-align: center;
+
+  /* padding-top: 80px; */
+}
+.butt7 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid white;
+  width: 480px;
+  height: 60px;
+   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+/* footer */
+
