--- a/Style.css
+++ b/Style.css
@@ -433,9 +433,39 @@ section3 {
   padding-left: 80px;
   gap: 30px;
 }
-.image2 > img {
+.image2 {
+  position: relative;
+}
+.i1 {
+  position: absolute;
   width: 660px;
   height: 420px;
+}
+.i2 {
+  position: absolute;
+  top: 100px;
+  right: -560px;
+  width: 80px;
+  height: 80px;
+}
+.i3 {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+}
+.i4 {
+  position: absolute;
+  bottom: 100px;
+  left: 12px;
+  width: 50px;
+  height: 50px;
+}
+.i5 {
+  position: absolute;
+  top: 40px;
+  right: -450px;
+  width: 50px;
+  height: 50px;
 }
 .text1 > a {
   display: flex;
@@ -475,25 +505,66 @@ section3 {
   padding-top: 10px;
   display: flex;
   flex-direction: column;
- justify-content: center; 
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
   background-color: #e7f9fd;
 }
-.part5 > h4 {
+h4 {
   width: 589px;
   height: 58px;
   display: flex;
+  gap: 20px;
+  padding: 30px;
   justify-content: center;
-  text-align: center;
+  align-items: center;
+  font-size: 36px;
 }
-.butt7 {
+.form1 {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   border: 1px solid white;
   width: 480px;
   height: 60px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  background-color: white;
+  border-radius: 24px;
+  border: 1px solid white;
+  gap: 140px;
 }
+.butt7 {
+  display: flex;
+  justify-content: center;
+  padding: 25px;
+}
+.button {
+  border: 1px solid white;
+  color: white;
+  border-radius: 16px;
+  padding: 10px;
+  width: 160px;
+  height: 60px;
+  background-color: black;
+}
+.email1 {
+  border: 1px solid white;
+}
+/* .i6 {
+  position: absolute;
+  width: 470px;
+  height: 335.62px;
+  bottom: 100px;
+} */
+/* .i7 {
+  position: absolute;
+   width: 470px;
+  height: 335.62px;
+} */
+/* .i8 {
+  position: absolute;
+   width: 470px;
+  height: 335.62px;
+} */
 
 /* footer */
 .foot1 {
@@ -511,6 +582,8 @@ section3 {
 .foot3 > h4 {
   padding-bottom: 16px;
   font-size: 24px;
+  display: flex;
+  justify-content: start;
 }
 .foot3 > p {
   padding-top: 16px;
@@ -521,6 +594,7 @@ section3 {
 .list2 {
   display: flex;
   flex-direction: row;
+  justify-content: end;
   gap: 20px;
   width: 400px;
   height: 19px;
@@ -529,9 +603,21 @@ section3 {
 }
 .downpart1 {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   padding-top: 48px;
   padding-bottom: 54px;
+  padding-right: 80px;
+  padding-left: 80px;
+}
+.down1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.down1 > .p {
+  display: flex;
+  justify-content: center;
 }
 .list3 {
   display: flex;
@@ -540,8 +626,10 @@ section3 {
 }
 .list4 {
   display: flex;
-  flex-direction: row;
+  justify-content: end;
+  align-items: end;
   border: 1px solid white;
+  gap: 20px;
   width: 133.2px;
   height: 22px;
 }
