--- a/Style.css
+++ b/Style.css
@@ -146,8 +146,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-content: center;
-  align-items: center;
   padding-top: 104px;
   padding-bottom: 55px;
 }
@@ -169,7 +167,6 @@
   font-size: 16px;
 }
 .profile > p {
-  /* padding: 10px; */
   color: rgba(0, 0, 0, 0.6);
   font-size: 14px;
 }
@@ -604,7 +601,8 @@ h4 {
 .downpart1 {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  /* gap: 50px; */
   padding-top: 48px;
   padding-bottom: 54px;
   padding-right: 80px;
@@ -627,7 +625,6 @@ h4 {
 .list4 {
   display: flex;
   justify-content: end;
-  align-items: end;
   border: 1px solid white;
   gap: 20px;
   width: 133.2px;
